# sharepay

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  WEB_USAGE.md  app.py  example.py  justfile  main.py  pyproject.toml  run_web.py  sheet.py  start_web.py
.github/workflows/: publish.yml  python.yml
examples/: basic_usage.py  google_sheets.py
payshare/: __init__.py  member.py  payment.py
scripts/: run_web.py
sharepay/: __init__.py  balance.py  member.py  payment.py  project.py  rate.py  sharepay.py  transaction.py  utils.py
src/sharepay/: __init__.py  balance.py  currency.py  expense_group.py  payment.py  rate.py  sharepay.py  utils.py
src/sharepay_web/: __init__.py  auth.py  database.py  main.py  schemas.py
src/sharepay_web/static/css/: style.css
src/sharepay_web/static/js/: app.js
src/sharepay_web/templates/: base.html  dashboard.html  index.html  login.html  register.html  trip_detail.html
templates/: app.html  index.html  login.html  register.html
tests/: test_expense_group.py  test_payment.py  test_rate.py  test_sharepay.py  test_web.py
web/: README.md  run.py  test_app.py
web/app/: auth.py  database.py  main.py  schemas.py
web/templates/: base.html  dashboard.html  register.html  trip_detail.html
