[project]
name            = "sharepay"
version         = "0.3.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.11"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "click>=8.3.1",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pandas>=3.0.0",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
  "SQLAlchemy>=2.0.46",
  "bcrypt==4.2.1",
  "email-validator>=2.3.0",
  "fastapi>=0.128.0",
  "jinja2>=3.1.6",
  "passlib[bcrypt]>=1.7.4",
  "pip>=25.3",
  "prek>=0.3.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.21",
  "ruff>=0.14.14",
  "ty>=0.0.13",
  "types-python-dateutil>=2.9.0.20251115",
  "uvicorn[standard]>=0.40.0",
]

[build-system]
requires      = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py"           = ["F401", "F403"]
"src/sharepay_web/*.py" = ["B008"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
