[project]
name            = "sharepay"
version         = "0.3.3"
description     = ""
readme          = "README.md"
requires-python = ">=3.11"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "click>=8.3.1",
  "httpx>=0.28.1",
  "pandas>=3.0.1",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
  "SQLAlchemy>=2.0.47",
  "bcrypt==5.0.0",
  "email-validator>=2.3.0",
  "fastapi>=0.134.0",
  "jinja2>=3.1.6",
  "passlib[bcrypt]>=1.7.4",
  "pip>=26.0.1",
  "prek>=0.3.4",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.22",
  "ruff>=0.14.14",
  "ty>=0.0.13",
  "types-python-dateutil>=2.9.0.20260124",
  "uvicorn[standard]>=0.41.0",
]

[build-system]
requires      = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.bumpversion]
current_version  = "0.3.3"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ANN",    # flake8-annotations
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C",      # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FURB",   # refurb
  "I",      # isort
  "G",      # flake8-logging-format
  "N",      # pep8-naming
  "PERF",   # perflint
  "PIE",    # flake8-pie
  # "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # ruff-specific rules
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py"           = ["F401", "F403"]
"src/sharepay_web/*.py" = ["B008"]
"tests/**.py"           = ["ANN", "TRY", "PERF"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
